--- a/src/main/resources/templates/pizza.html
+++ b/src/main/resources/templates/pizza.html
@@ -39,12 +39,12 @@
 <!--    <p class="zakaz">пицца корбанара</p>-->
 <!--    <p class="zakaz">острая</p>-->
 <!--</div>-->
-<div class="yellowFonZakaz" >
-    <p th:text="${name}"></p>
-    <p class="zakaz">Шляпин</p>
+<div class="yellowFonZakaz">
+    <p th:text="${name}" class="zakaz"></p>
+    <p th:text="${surname}" class="zakaz">Шляпин</p>
     <p class="zakaz">Александрович</p>
     <p class="zakaz">пицца корбанара</p>
-    <p class="zakaz">острая</p>
+    <p th:text="${c}" class="zakaz"></p>
 </div>
     <img src="https://habrastorage.org/getpro/habr/post_images/822/fcc/d9a/822fccd9a214266b046851374d588465.jpg" id="back">
 </body>
