--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,8 +10,8 @@
     <div id="yellowFon">
         <form th:action="@{/login}" method="post" id="vertical">
             <h1 class="center">Войдите</h1>
-            <div><p>введите имя</p><input type="text" name="username"/></div>
-            <div><p>введите пароль</p><input type="password" name="password"/></div>
+            <div><p>введите имя</p><input type="text" name="username" placeholder="имя"/></div>
+            <div><p>введите пароль</p><input type="password" name="password" placeholder="пароль"/></div>
             <div id="gorizont"><input type="submit" value="войти"/></div>
         </form>
     </div>
