--- a/src/main/resources/templates/blogEdit.html
+++ b/src/main/resources/templates/blogEdit.html
@@ -4,7 +4,7 @@
         xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Юху закажите свою пицу</title>
+    <title>Buenos pizza</title>
 <body>
 <div class="center">
     <div id="yellowFon">
@@ -27,6 +27,14 @@
                     <option>пицца корбанара</option>
                     <option>пицца пеперони</option>
                     <option>пицца цезарь</option>
+                </select>
+                <div class="select__arrow"></div>
+            </div>
+            <div class="select">
+                <select name="Size">
+                    <option value="1">маленькая</option>
+                    <option value="2">средняя</option>
+                    <option value="3">большая</option>
                 </select>
                 <div class="select__arrow"></div>
             </div>
