--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -23,6 +23,7 @@
         </form>
     </div>
 </div>
+<a href="/registrationWorker" class="signOut1 floating-button">зарегистрироваться как работник</a>
 <a href="/login" class="signOut floating-button">назад</a>
 </body>
 <style>
@@ -109,10 +110,16 @@ a{
 #inp{
     margin-right:20px;
 }
-.signOut{
+.signOut1{
     position:absolute;
     right:10px;
     top:10px;
+    z-index:999;
+}
+.signOut{
+    position:absolute;
+    right:10px;
+    top:55px;
     z-index:999;
 }
 .zakaz{
